including branding & licensing swag and added link to title for refresh

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,8 +3,13 @@ extends layout
 block content
   .row
     .twelve.columns
-        h1 LinkedIn Profile to Trello Card Generator
-        h6 Version: 1.0 Alpha
+        h1 
+          a(href="/", style="color:#000;") LinkedIn Profile to Trello Card Generator
+        .row 
+          .eight.columns
+            h5 Courtesy of <a href='http://fouadmat.in/'>Fouad Matin</a> of <a href='http://classdojo.com'>ClassDojo</a>.
+          .four.columns  
+            h5 Version: 1.0 Alpha
         hr
     .row
       .eight.columns
