fixed search when not authorized bug and undefined public profile bug

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,7 +20,7 @@ html
     script(src='https://raw.github.com/carhartl/jquery-cookie/master/jquery.cookie.js')
     script(src='https://api.trello.com/1/client.js?key=529941fa33ef8ee5eee461d65190f703')
     script(type='text/javascript', src='http://platform.linkedin.com/in.js')
-      api_key: x65nq8jw6r9b
+      api_key: REPLACE_WITH_API_KEY
       authorize: true
       credentials_cookie: true
     script(src='/javascripts/app.js')
